@@ -1,5 +1,8 @@
 Release Notes
 
+* 4/16/2018
+  * added minCpuEfficiency
+
 * 3/20/2018
   * notDiscardEvents
 
